--- a/global_design/css/main.css
+++ b/global_design/css/main.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600);
 
 /********* Limpieza del documento **********/
 
